src/test/resources/wacc_examples/invalid/semanticErr/class/simple/classDoubleFunctions.wacc
# functions with the same name are declared in a class

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  class c {
    int f(int y) is
        return y
    end
    int f(bool b) is
        return 0
    end
    int f() is
        return 1
    end
    int f() is
        return 10
    end
  }
  skip
end
